<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_red"
    tools:context=".access.SignUp">

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/background_main" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="20dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/icon_light" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/signup"
                android:textColor="@color/main_white"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/rounded_top"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/welcome"
            android:textColor="@color/main_blue"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_desc"
            android:textColor="@color/main_grey" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="8dp"
            android:text="@string/fullname"
            android:textColor="@color/main_grey"
            android:textSize="15sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/t_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/main_blue"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@+id/desc"
            app:startIconDrawable="@drawable/ic_baseline_account_circle_24"
            app:startIconTint="@color/main_blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fullname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/textinput"
                android:hint="@string/type_here"
                android:inputType="textEmailAddress"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--        <TextView-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="15dp"-->
        <!--            android:layout_marginBottom="8dp"-->
        <!--            android:text="@string/email"-->
        <!--            android:textColor="@color/main_grey"-->
        <!--            android:textSize="15sp"-->
        <!--            android:textStyle="bold" />-->

        <!--        <com.google.android.material.textfield.TextInputLayout-->
        <!--            android:id="@+id/t_email"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:textColorHint="@color/main_blue"-->
        <!--            app:hintEnabled="false"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/desc"-->
        <!--            app:startIconDrawable="@drawable/ic_baseline_alternate_email_24"-->
        <!--            app:startIconTint="@color/main_blue">-->

        <!--            <com.google.android.material.textfield.TextInputEditText-->
        <!--                android:id="@+id/email"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="match_parent"-->
        <!--                android:background="@drawable/textinput"-->
        <!--                android:hint="@string/type_here"-->
        <!--                android:inputType="textEmailAddress"-->
        <!--                android:textSize="15sp" />-->

        <!--        </com.google.android.material.textfield.TextInputLayout>-->

        <!--        <TextView-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="15dp"-->
        <!--            android:layout_marginBottom="8dp"-->
        <!--            android:text="@string/username"-->
        <!--            android:textColor="@color/main_grey"-->
        <!--            android:textSize="15sp"-->
        <!--            android:textStyle="bold" />-->

        <!--        <com.google.android.material.textfield.TextInputLayout-->
        <!--            android:id="@+id/t_username"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:textColorHint="@color/main_blue"-->
        <!--            app:hintEnabled="false"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/desc"-->
        <!--            app:startIconDrawable="@drawable/ic_baseline_adjust_24"-->
        <!--            app:startIconTint="@color/main_blue">-->

        <!--            <com.google.android.material.textfield.TextInputEditText-->
        <!--                android:id="@+id/username"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="match_parent"-->
        <!--                android:background="@drawable/textinput"-->
        <!--                android:hint="@string/type_here"-->
        <!--                android:inputType="textEmailAddress"-->
        <!--                android:textSize="15sp" />-->

        <!--        </com.google.android.material.textfield.TextInputLayout>-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="8dp"
            android:text="@string/password"
            android:textColor="@color/main_grey"
            android:textSize="15sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/t_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/main_blue"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/main_blue"
            app:startIconDrawable="@drawable/ic_baseline_fingerprint_24"
            app:startIconTint="@color/main_blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/textinput"
                android:hint="@string/type_here"
                android:inputType="textPassword"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="8dp"
            android:text="@string/phone"
            android:textColor="@color/main_grey"
            android:textSize="15sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/t_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/main_blue"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@+id/desc"
            app:startIconDrawable="@drawable/ic_baseline_phone_24"
            app:startIconTint="@color/main_blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/textinput"
                android:hint="@string/type_here"
                android:inputType="phone"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="8dp"
            android:text="@string/photo_id"
            android:textColor="@color/main_grey"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <androidx.cardview.widget.CardView
                android:id="@+id/takeKTP"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:visibility="visible"
                app:cardCornerRadius="15dp"
                app:contentPadding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:src="@drawable/id_card" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/ktp"
                        android:textAllCaps="true"
                        android:textColor="@color/main_grey" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/takeKTPData"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:visibility="gone"
                app:cardCornerRadius="15dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/dataKTP"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/banner_app" />

                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="bottom"
                    android:background="#80000000"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ktp"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/takeSelfie"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:visibility="visible"
                app:cardCornerRadius="15dp"
                app:contentPadding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:src="@drawable/id_selfie" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/selfie_ktp"
                        android:textAllCaps="true"
                        android:textColor="@color/main_grey" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/takeSelfieData"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:visibility="gone"
                app:cardCornerRadius="15dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/dataSelfie"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/banner_app" />

                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="bottom"
                    android:background="#80000000"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/selfie_ktp"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/term_condition_text"
                android:textColor="@color/main_grey"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/term_condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/term_condition_value"
                android:textColor="@color/main_blue"
                android:textSize="15sp" />

        </LinearLayout>

        <Button
            android:id="@+id/do_regist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/button_onboard_disabled"
            android:enabled="false"
            android:text="@string/signup"
            android:textColor="@color/main_white"
            android:textSize="15sp" />

        <Button
            android:id="@+id/do_login"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/transparent"
            android:text="@string/old_user"
            android:textAllCaps="false"
            android:textColor="@color/main_blue"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|center"
            android:text="@string/copyright"
            android:textColor="@color/main_grey"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>